# icr-mp-impl

./: README.md
safestore/: Cargo.toml
safestore/src/: main.rs  storagebase.rs  userbase.rs
safestore/src/authentication/: user.rs
safestore/src/cryptography/: mod.rs
safestore/src/storage/: file.rs  folder.rs  mod.rs  server.rs
safestore/src/storagebase/: file.rs  folder.rs
safestore/src/userbase/: user.rs
