[package]
name = "safestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
block-modes = "0.9.1"
block-padding = "0.3.3"
dryoc = "0.5.3"
hex = "0.4.3"
rand = "0.8.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
